[tool.poetry]
name = "Unit1Project1"
version = "0.1.0"
description = "https://replit.com/@Period-1-CSA/Python-unit-1-project-1-WilliamKessner#main.py"
authors = ["WillyKess <williamhtkessner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
